--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"bilibili-live-ws": "^5.1.1",
 		"mysql": "^2.18.1",
+		"nodemailer": "^6.6.3",
 		"xmlhttprequest": "^1.8.0"
 	}
 }
