--- a/.github/workflows/mirror-to-gitee.yml
+++ b/.github/workflows/mirror-to-gitee.yml
@@ -1,17 +1,12 @@
 name: mirror-to-gitee
-on:
-  push:
-    branches:
-    - main
-    - dev
-  delete:
+on: [ push, delete, create ]
 
 jobs:
   main-to-gh-pages:
     runs-on: ubuntu-latest
     steps:                          
     - name: 'checkout'
-      uses: actions/checkout@v2
+      uses: actions/checkout@v1
         
     - name: 'mirror to gitee'
       uses: pixta-dev/repository-mirroring-action@v1
