--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"bilibili-live-ws": "^5.1.1",
 		"mysql": "^2.18.1",
 		"nodemailer": "^6.6.3",
+		"opn": "^6.0.0",
 		"xmlhttprequest": "^1.8.0"
 	}
 }
