--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "bili-live-monitor",
-	"version": "0.6.0",
+	"version": "1.0.0",
 	"description": "监控哔哩哔哩直播间数据，实时保存至数据库，并在内置网页上查看精致的可视化统计图表。",
-	"main": "bili-live-monitor.js",
+	"main": "src/main.js",
 	"scripts": {
 		"start": "node src/main.js",
 		"console": "node src/monitor_console.js",
